# cmake-cpp-project

./: CMakeLists.txt  README.md  main.cpp
myLibrary/: CMakeLists.txt  myLibrary.cpp  myLibrary.h
scripts/: launcher.sh
